@@ -525,6 +525,11 @@ Changes to Python's build process and to the C API include:
 
   (Contributed by Antoine Pitrou; :issue:`9203`.)
 
+* The option ``--with-wctype-functions`` was removed.  The built-in unicode
+  database is now used for all functions.
+
+  (Contributed by Amaury Forgeot D'Arc; :issue:`9210`.)
+
 
 Porting to Python 3.2
 =====================
